@@ -6056,6 +6056,9 @@
                             <para>Fixed problem #610764 (menu item won't stay checked)</para>
                         </listitem>
                         <listitem>
+                            <para>Fixed problem #626469 (add support for other su-like programs: xdg-su, gnomesu)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed problem with broken Spanish translation</para>
                         </listitem>
                     </itemizedlist>
